# youtube_transcribe_mcp_server

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  issue.yml
docs/: improvements.md
src/: config.py  logging_utils.py  server.py
src/adapters/: filesystem_store.py  manifest_json_repo.py  ytdlp_client.py
src/domain/: errors.py  models.py  types.py
src/mcp_server/: app.py  deps.py  error_handling.py  logging_utils.py  payloads.py  resources.py  session.py  templates.py  tools.py
src/ports/: __init__.py  manifest_repo.py  transcriber.py
src/services/: session_service.py  transcription_service.py
src/yt_dlp_transcriber/: __init__.py  config.py  logging_utils.py  server.py
src/yt_dlp_transcriber/adapters/: __init__.py  filesystem_store.py  manifest_json_repo.py  ytdlp_client.py
src/yt_dlp_transcriber/domain/: models.py  time_utils.py  types.py
src/yt_dlp_transcriber/mcp/: __init__.py  app.py  deps.py  error_handling.py  payloads.py  (+5 more)
tests/: conftest.py  test_config.py  test_domain_models.py  test_errors.py  test_filesystem_store.py  test_logging_utils.py  test_manifest.py  test_manifest_repo.py  test_manifest_repo_coverage.py  test_mcp_app.py  test_mcp_deps.py  test_mcp_error_mapping.py  test_mcp_payloads.py  test_mcp_session.py  test_mcp_templates.py  test_mcp_tools.py  test_mcp_wiring.py  test_resources.py  test_session_service.py  test_time_utils.py  test_transcription_service.py  test_ytdlp_client.py
(+4 files in other folders)
